Updated the name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sprite-studio",
+  "name": "pixel-forge",
   "private": false,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "type": "module",
   "author": {
     "name": "Anthony. W. Weed",
